--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,8 +8,11 @@ server {
         index index.html;
     }
 
-    # Proxy API requests to Python app
-    location /api/ {
+    location /api/python/ {
         proxy_pass http://test-container-python:5000/;
+    }
+
+    location /api/php/ {
+        proxy_pass http://test-container-php:5001/;
     }
 }
