--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,6 +13,10 @@ server {
     }
 
     location /api/php/ {
-        proxy_pass http://test-container-php:5001/;
+        proxy_pass http://test-container-php:5000/;
     }
+
+    # location /api/java/ {
+    #     proxy_pass http://test-container-java:8080/;
+    # }
 }
